# clients

./: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  0.0b9f02c08b2d5661f51b.js  0.0b9f02c08b2d5661f51b.js.map  0.71be79198fcb366fc031.js  0.71be79198fcb366fc031.js.map  0.bf4b332a2b02fbd2df28.js  0.bf4b332a2b02fbd2df28.js.map  125.03bfd609bdf87dbb048a.js  125.03bfd609bdf87dbb048a.js.map  126.02ab8e5cce4378e14b11.js  126.02ab8e5cce4378e14b11.js.map  126.1c26138c03d5b1699636.js  126.1c26138c03d5b1699636.js.map  126.2d47da749dbb85edc614.js  126.2d47da749dbb85edc614.js.map  126.34b6104a2fccccedd7c0.js  126.34b6104a2fccccedd7c0.js.map  126.3e67f0f0616d1092b021.js  126.3e67f0f0616d1092b021.js.map  126.4516b08a30608b206242.js  126.4516b08a30608b206242.js.map  126.486f4dfb92168daf5c65.js  126.486f4dfb92168daf5c65.js.map  126.61da5883486214dcde56.js  126.61da5883486214dcde56.js.map  126.77f9e368e57a94be285f.js  126.77f9e368e57a94be285f.js.map  126.8027cf8a09fe1a7dfde2.js  126.8027cf8a09fe1a7dfde2.js.map  126.85ef40117f045e0c2d41.js  126.85ef40117f045e0c2d41.js.map  126.85fc6b8ceaaa2e503afa.js  126.85fc6b8ceaaa2e503afa.js.map  126.865444139880ae99ba03.js  126.865444139880ae99ba03.js.map  126.8ac91ecc4bfa00ce9fcc.js  126.8ac91ecc4bfa00ce9fcc.js.map  (+960 more)
.husky/: commit-msg  (+1 more)
apps/desktop/native/crates/core/: Cargo.toml
apps/desktop/native/crates/core/src/: ipc.rs  lib.rs
apps/desktop/native/crates/core/src/biometric/: windows.rs
apps/desktop/native/crates/napi/: Cargo.toml  index.d.ts  index.js  package.json
apps/desktop/native/crates/napi/src/: lib.rs
(+4285 files in other folders)
