[package]
edition = "2021"
license = "GPL-3.0"
name = "desktop_core"
version = "0.0.0"

[features]
default = []
manual_test = []

[dependencies]
anyhow = "1.0"
dirs = "4.0.0"
futures = "0.3"
once_cell = "1.17.0"
parity-tokio-ipc = "0.9.0"
scopeguard = "1.1.0"
tokio = { version = "1.23.0", features = ["full"] }

[target.'cfg(windows)'.dependencies]
widestring = "1.0.2"
windows = { version = "0.43.0", features = [
  "Foundation",
  "Security_Credentials_UI",
  "Storage_Streams",
  "Win32_Foundation",
  "Win32_Security_Credentials",
  "Win32_System_WinRT",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(windows)'.dev-dependencies]
keytar = "0.1.6"

[target.'cfg(target_os = "macos")'.dependencies]
core-foundation = "0.9.3"
security-framework = "2.7.0"
security-framework-sys = "2.6.1"

[target.'cfg(target_os = "linux")'.dependencies]
gio = "0.16.7"
libsecret = "0.2.0"
